--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
              <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
            <br>
                 <span style="font-size: 90%;">
-        I am grateful to the Brandeis CS department for their kind support and understanding.
+        I have bravely persevered through a difficult period in my life and am fortunate to have successfully concluded the collaboration with the former advisor. I am grateful to the Brandeis CS department for their kind support and understanding.
         I am looking forward to a new chapter of my life!
     </span>
             </p>
