Dec 21 papers update

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
              <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
            <br>
                 <span style="font-size: 90%;">
-        I have bravely persevered through a difficult period in my life and am fortunate to have successfully concluded the collaboration with the former advisor. I am grateful to the Brandeis CS department for their kind support and understanding.
+        I have bravely persevered through a difficult period in my life and am fortunate to have successfully ended the collaboration with the former advisor. I am grateful to the Brandeis CS department for their kind support and understanding.
         I am looking forward to a new chapter of my life!
     </span>
             </p>
@@ -104,12 +104,47 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
 
-              <heading>Publications</heading>
+              <heading>Papers</heading>
             </td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/vlm.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Efficient and Effective Training: Visual Conditioned Language Generation by LLM</papertitle>
+              </a>
+              <br>
+              <b>In submission</b>
+              <br>
+        <em>Achieved six-fold training speed improvement for SOTA vision-language generative model (BLIP-2; 7 billion parameter model), cutting training time from 100 to 16 GPU hours through efficient visual data reduction.</em>
+              <br>
+<!--              <a href="">project page</a>-->
+<!--              /-->
+<!--              <a href="">preprint</a>-->
+              <p></p>
+            </td>
+          </tr>
         <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -137,7 +172,7 @@
               <br>
               <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
               <br>
-        <em>Fortieth International Conference on Machine Learning (ICML) 2023</em>.
+        <em>Fortieth International Conference on Machine Learning (ICML), 2023</em>.
               <br>
               <a href="https://openreview.net/forum?id=3jV525Hmqr">project page</a>
               /
