--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     My past research investigates intrinsic properties of deep learning behind the phenomena across diverse modalities, then driving trustworthy real-world applications:
 </p>
 <ul>
-    <li>Efficient Vision-Language Alignment in Large Model <a href="">[in submission]</a></li>
+    <li>Efficient Vision-Language Generation in Large Model <a href="">[in submission]</a></li>
     <li>Inherent robustness of Mixture-of-Experts <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[ICLR]</a></li>
     <li>Meta learning on relational structures <a href="https://openreview.net/forum?id=LEVbhNrLEL">[TMLR]</a></li>
     <li>Low-dimensionality in self-supervised training data <a href="https://openreview.net/forum?id=3jV525Hmqr">[ICML]</a> & <a href="https://openreview.net/forum?id=rg_yN3HpCp">[NeurIPS]</a></li>
@@ -137,7 +137,7 @@
               <br>
               <b>In submission</b>
               <br>
-        <em>Achieved six-fold training speed improvement for SOTA vision-language generative model (BLIP-2; 7 billion parameter model), cutting training time from 100 to 16 GPU hours through efficient visual data reduction.</em>
+        <em>achieved 6× training speed improvement for SOTA multi-modal generative model with 7 Billion parameters, cutting training time from 100 to 16 GPU hours through efficient visual redundancy reduction.</em>
               <br>
 <!--              <a href="">project page</a>-->
 <!--              /-->
