--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <papertitle>When Sparsity Meets Contrastive Models: Less Data Can Bring Better Class-Balanced Representations</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
+              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, et al.
               <br>
         <em>Fortieth International Conference on Machine Learning (ICML), 2023</em>.
               <br>
@@ -206,7 +206,7 @@
                 <papertitle>Chasing All-Round Graph Representation Robustness: Model, Training, and Optimization</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Yijun Tian, Mingxuan Ju, Zheyuan Liu, Yanfang Ye, Nitesh Chawla, and Chuxu Zhang
+              <b>Chunhui Zhang</b>, Yijun Tian, Mingxuan Ju, Zheyuan Liu, Yanfang Ye, Nitesh Chawla, et al.
               <br>
         <em>The 11th International Conference on Learning Representations (ICLR)</em>, 2023.
               <br>
@@ -241,7 +241,7 @@
                 <papertitle>Mind the Gap: Mitigating the Distribution Gap in Graph Few-shot Learning</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, Chuxu Zhang.
+              <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, et al.
               <br>
         <em>Transactions on Machine Learning Research (TMLR)</em>, 2023.
               <br>
@@ -276,7 +276,7 @@
                 <papertitle>Fair Graph Representation Learning via Diverse Mixture-of-Experts</papertitle>
               </a>
               <br>
-              Zheyuan Liu*, <b>Chunhui Zhang</b> (Co-first author in alphabetical order)*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
+              Zheyuan Liu*, <b>Chunhui Zhang</b> (Co-first author in alphabetical order)*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye, et al.
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
                 <br>
@@ -315,7 +315,7 @@
                 <papertitle>Boosting Graph Neural Networks via Adaptive Knowledge Distillation</papertitle>
               </a>
               <br>
-              Zhichun Guo, <b>Chunhui Zhang</b>, Yujie Fan, Yijun Tian, Chuxu Zhang, and Nitesh Chawla
+              Zhichun Guo, <b>Chunhui Zhang</b>, Yujie Fan, Yijun Tian, et al.
               <br>
         <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
               <br>
@@ -350,7 +350,7 @@
                 <papertitle>Heterogeneous Graph Masked Autoencoders</papertitle>
               </a>
               <br>
-              Yijun Tian, Kaiwen Dong, <b>Chunhui Zhang</b>, Chuxu Zhang, and Nitesh Chawla
+              Yijun Tian, Kaiwen Dong, <b>Chunhui Zhang</b>, et al.
               <br>
         <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
               <br>
@@ -385,7 +385,7 @@
                 <papertitle>Heterogeneous Temporal Graph Neural Network Explainer</papertitle>
               </a>
               <br>
-              Jiazheng Li, <b>Chunhui Zhang</b>, Chuxu Zhang
+              Jiazheng Li, <b>Chunhui Zhang</b>, et al.
               <br>
         <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2023.
               <br>
@@ -455,7 +455,7 @@
                 <papertitle>Co-Modality Imbalanced Graph Contrastive Learning</papertitle>
               </a>
               <br>
-              Yiyue Qian, <b>Chunhui Zhang</b>, Yiming Zhang, Qianlong Wen, Yanfang Ye, and Chuxu Zhang
+              Yiyue Qian, <b>Chunhui Zhang</b>, Yiming Zhang, Qianlong Wen, Yanfang Ye, et al.
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
@@ -490,7 +490,7 @@
                 <papertitle>Diving into Unified Data-Model Sparsity for Class-Imbalanced Graph Representation Learning</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
+              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, et al.
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop) 2022 & 37th AAAI Conference on Artificial Intelligence-Workshop on DL-Hardware Co-Design for AI Acceleration (AAAI DCAA workshop), <b>Best Paper Runner-up Award</b> 2023</em>.
               <br>
@@ -525,7 +525,7 @@
                 <papertitle>GraphBERT: Bridging Graph and Text for Malicious Behavior Detection on Social Media</papertitle>
               </a>
               <br>
-              Jiele Wu, <b>Chunhui Zhang</b>, Zheyuan Liu, Erchi Zhang, Steven Wilson, and Chuxu Zhang
+              Jiele Wu, <b>Chunhui Zhang</b>, Zheyuan Liu, Erchi Zhang, Steven Wilson, et al.
               <br>
         <em>IEEE International Conference on Data Mining (ICDM)</em>, 2022.
               <br>
@@ -560,7 +560,7 @@
                 <papertitle>Look Twice as Much as You Say: Scene Graph Contrastive Learning for Self-Supervised Image Caption Generation</papertitle>
               </a>
               <br>
-              <b>Chunhui Zhang</b>, Chao Huang, Youhuan Li, Xiangliang Zhang, Yanfang Ye, and Chuxu Zhang
+              <b>Chunhui Zhang</b>, Chao Huang, Youhuan Li, Xiangliang Zhang, Yanfang Ye, et al.
               <br>
         <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2022.
               <br>
