--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <br>
         <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>
               <br>
-              <a href="https://tinyurl.com/JacoLip-paper">project page</a>
+              <a href="https://github.com/chunhuizng/lipschitz-fairness">project page</a>
               /
               <a href="https://openreview.net/forum?id=ODSgo2m8aE">preprint</a>
               <p></p>
@@ -217,7 +217,7 @@
               <br>
         <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>
               <br>
-              <a href="https://tinyurl.com/emergent-degradation">project page</a>
+              <a href="https://github.com/chunhuizng/emergent-degradation">project page</a>
               /
               <a href="https://openreview.net/forum?id=Koh0i2u8qX">preprint</a>
               <p></p>
