--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 
                 <heading>Posts</heading>
             <p>
+            <span style="font-style: italic;">[Jan 23, 2024]</span> One paper accepted to The Web Conference 2024 (controllable unlearning the vision models). Congrats to all co-authors and thank you all for letting me learn a lot!
+            </p>
+            <p>
             <span style="font-style: italic;">[Jan 16, 2024]</span> Two papers accepted to ICLR 2024 (alignment for fairness and robustness). Thanks to all co-authors, especially my rockstar advisor Prof. Soroush Vosoughi, my mentees and friends <a href="https://yaningjia.github.io/">Yaning Jia</a> and <a href="https://xiangchi-yuan.github.io/">Xiangchi Yuan</a>. I extremely recommend my friends to any professor seeking the best candidates!
             </p>
             <p>
@@ -220,6 +223,41 @@
               <a href="https://github.com/chunhuizng/emergent-degradation">project page</a>
               /
               <a href="https://openreview.net/forum?id=Koh0i2u8qX">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/www24.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Breaking the Trilemma of Privacy, Utility, Efficiency via Controllable Machine Unlearning</papertitle>
+              </a>
+              <br>
+              {Zheyuan Liu, Guangyao Dou}, Yijun Tian, <b>Chunhui Zhang</b>, Eli Chien, Ziwei Zhu
+              <br>
+                <em>ACM International World Wide Web Conference (The Web Conference/WWW), 2024</em>.
+              <br>
+              <a href="https://github.com/guangyaodou/ConMU">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2310.18574.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
