--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Breaking the Trilemma of Privacy, Utility, Efficiency via Controllable Machine Unlearning</papertitle>
+                <papertitle>Breaking the Trilemma of Privacy, Utility, and Efficiency via Controllable Machine Unlearning</papertitle>
               </a>
               <br>
               {Zheyuan Liu, Guangyao Dou}, Yijun Tian, <b>Chunhui Zhang</b>, Eli Chien, Ziwei Zhu
