--- a/index.html
+++ b/index.html
@@ -224,6 +224,41 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/icwsm24.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>How to Improve Representation Alignment and Uniformity in Graph-based Collaborative Filtering?</papertitle>
+              </a>
+              <br>
+              Zhongyu Ouyang, <b>Chunhui Zhang</b>, Shifu Hou, Chuxu Zhang, Yanfang Ye
+              <br>
+                <em>International AAAI Conference on Web and Social Media (ICWSM), 2024</em>.
+              <br>
+              <a href="https://anonymous.4open.science/r/AUPlus-E7C2/">project page</a>
+              /
+              <a href="https://anonymous.4open.science/r/AUPlus-E7C2/">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/www24.png' width="160">
               </div>
               <script type="text/javascript">
