--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
               <br>
                 <em>International AAAI Conference on Web and Social Media (ICWSM), 2024</em>.
               <br>
-              <a href="https://anonymous.4open.science/r/AUPlus-E7C2/">project page</a>
+              <a href=" https://github.com/zyouyang/AUPlus">project page</a>
               /
-              <a href="https://anonymous.4open.science/r/AUPlus-E7C2/">preprint</a>
+              <a href="data/ICWSM_AUPlus.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
