--- a/index.html
+++ b/index.html
@@ -224,6 +224,41 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/uai24.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>GCVR: Reconstruction from Cross-View Enable Sufficient and Robust Graph Contrastive Learning</papertitle>
+              </a>
+              <br>
+                Qianlong Wen, Zhongyu Ouyang, <b>Chunhui Zhang</b>, Yiyue Qian, Chuxu Zhang, Yanfang Ye
+              <br>
+                <em>The 40th Conference on Uncertainty in Artificial Intelligence (UAI), 2024</em>.
+              <br>
+              <a href="https://arxiv.org/pdf/2209.07699">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2209.07699">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/icwsm24.png' width="160">
               </div>
               <script type="text/javascript">
@@ -246,7 +281,7 @@
               <br>
                 <em>International AAAI Conference on Web and Social Media (ICWSM), 2024</em>.
               <br>
-              <a href=" https://github.com/zyouyang/AUPlus">project page</a>
+              <a href="https://github.com/zyouyang/AUPlus">project page</a>
               /
               <a href="data/ICWSM_AUPlus.pdf">preprint</a>
               <p></p>
