update grammar may 8

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-    My past research investigates intrinsic properties of deep learning behind the phenomena across diverse modalities, then driving trustworthy real-world applications:
+    My past research investigates intrinsic properties of deep learning behind the phenomena across diverse modalities, then driving trustworthy real-world applications.
 </p>
 
 
@@ -172,7 +172,7 @@
               <br>
                 <em>International Conference on Learning Representations (ICLR), 2024</em>.
               <br>
-        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>
+<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
               <a href="https://github.com/chunhuizng/lipschitz-fairness">project page</a>
               /
@@ -209,7 +209,7 @@
               <br>
                 <em>International Conference on Learning Representations (ICLR), 2024</em>.
               <br>
-        <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>
+<!--        <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>-->
               <br>
               <a href="https://github.com/chunhuizng/emergent-degradation">project page</a>
               /
@@ -461,7 +461,7 @@
               /
               <a href="data/WWW23_GFAME_cameraready.pdf">preprint</a>
                               <br>
-                <em>Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
+<!--                <em>Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>-->
               <br>
               <p></p>
             </td>
