--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
              <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
            <br>
                 <span style="font-size: 90%;">
-        I have bravely persevered through a difficult period in my life, and am brave enough to break the collaboration with the former advisor. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
-        I am looking forward to a new chapter of my life!
-    </span>
+        I have bravely persevered through a difficult period in my life (caused by the former PI, Chuxu Zhang), and am brave enough to overcome toxic environment. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
+        I am moving on to a new chapter in my life, and I am trying my best to help all students in difficult, toxic, or struggling situations, all for the sake of fostering a better academic environment that embraces diversity, equity, and inclusion.    </span>
             </p>
 
             </td>
