--- a/index.html
+++ b/index.html
@@ -129,16 +129,18 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Efficient and Effective Training: Visual Conditioned Language Generation by LLM</papertitle>
+                <papertitle>Expedited Training of Visual Conditioned Language Generation via Redundancy Reduction</papertitle>
               </a>
               <br>
-              <b>In submission</b>
+              Yiren Jian, Tingkai Liu, Yunzhe Tao, <b>Chunhui Zhang</b>, Soroush Vosoughi, Hongxia Yang
               <br>
-        <em>achieved 6× training speed improvement for SOTA multi-modal generative model with 7 Billion parameters, cutting training time from 100 to 16 GPU hours through efficient visual redundancy reduction.</em>
+                <em>Annual Meeting of the Association for Computational Linguistics (ACL), 2024</em>.
               <br>
-<!--              <a href="">project page</a>-->
-<!--              /-->
-<!--              <a href="">preprint</a>-->
+<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
+              <br>
+              <a href="https://github.com/yiren-jian/EVLGen">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2310.03291">preprint</a>
               <p></p>
             </td>
           </tr>
