--- a/index.html
+++ b/index.html
@@ -225,6 +225,43 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/kdd24.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Graph Weak-Shot Learning</papertitle>
+              </a>
+              <br>
+                Xiangchi Yuan, Yijun Tian, <b>Chunhui Zhang</b>, Yanfang Ye, Nitesh V Chawla, et al.
+              <br>
+                <em>ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD), 2024</em>.
+              <br>
+<!--        <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>-->
+              <br>
+              <a href="https://github.com/xiangchi-yuan/Graph_Mixed_Supervised_Learning">project page</a>
+              /
+              <a href="https://xiangchi-yuan.github.io/data/LipMoE.pdf">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/uai24.png' width="160">
               </div>
               <script type="text/javascript">
