--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <br>
               <a href="https://github.com/chunhuizng/lipschitz-fairness">project page</a>
               /
-              <a href="https://openreview.net/forum?id=ODSgo2m8aE">preprint</a>
+              <a href="data/ICLR24_Lipschitz_Align_camera_ready.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
