--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Graph Weak-Shot Learning</papertitle>
+                <papertitle>Graph Mixed Supervised Learning via Generalized Knowledge</papertitle>
               </a>
               <br>
                 Xiangchi Yuan, Yijun Tian, <b>Chunhui Zhang</b>, Yanfang Ye, Nitesh V Chawla, et al.
