--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
              <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
            <br>
                 <span style="font-size: 90%;">
-        I have bravely persevered through a difficult period in my life (caused by the former PI, Chuxu Zhang), and am brave enough to overcome toxic environment. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
+        I have bravely persevered through a difficult period in my life (caused by the former PI), and am brave enough to overcome toxic environment. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
         I am moving on to a new chapter in my life, and I am trying my best to help all students in difficult, toxic, or struggling situations, all for the sake of fostering a better academic environment that embraces diversity, equity, and inclusion.    </span>
             </p>
 
@@ -215,6 +215,43 @@
               <a href="https://github.com/chunhuizng/emergent-degradation">project page</a>
               /
               <a href="https://openreview.net/forum?id=Koh0i2u8qX">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/ecmlpkdd.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Prompt Learning Unlocked for App Promotion</papertitle>
+              </a>
+              <br>
+                Zhongyu Ouyang,  <b>Chunhui Zhang</b>, Shifu Hou, Shang Ma, Chaoran Chen, Toby Li, Xusheng Xiao, Chuxu Zhang, Yanfang Ye
+              <br>
+                <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2024</em>.
+              <br>
+<!--        <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>-->
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="">preprint</a>
               <p></p>
             </td>
           </tr>
