--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/"><i class="fa fa-linkedin" style="font-size:22px"></i></a> &nbsp/&nbsp
                 <a href="https://twitter.com/chunhuizng"><i class="fa fa-twitter" style="font-size:23px"></i></a>&nbsp/&nbsp
                 <a href="data/Chunhui_CV.pdf">CV</i></a> &nbsp/&nbsp
-                <a href="https://scholar.google.com.hk/citations?user=im3dmssAAAAJ&hl=en">Google Scholar</a>
+                <a href="https://scholar.google.com.hk/citations?user=jlqnbkAAAAAJ">Google Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:26%;max-width:26%">
