--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:26%;max-width:26%">
-              <a href="images/img.png"><img style="width:70%;max-width:70%" alt="profile photo" src="images/personal.jpeg" class="hoverZoomLink"></a>
+              <a href="images/img.png"><img style="width:70%;max-width:70%" alt="profile photo" src="images/img.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
