update Symbol Prompt Tuning

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <br>
                 Zhongyu Ouyang,  <b>Chunhui Zhang</b>, Shifu Hou, Shang Ma, Chaoran Chen, Toby Li, Xusheng Xiao, Chuxu Zhang, Yanfang Ye
               <br>
-                <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2024</em>.
+                <em>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD), 2024</em>.
               <br>
 <!--        <em><a href="https://xiangchi-yuan.github.io/">Yuan</a> is a master student who was mentored by me. Thanks <a href="https://xiangchi-yuan.github.io/">Yuan</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking the best candidates!</em>-->
               <br>
