update Completes the App Promotion

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Symbol Prompt Tuning</papertitle>
+                <papertitle>Symbol Prompt Tuning Completes the App Promotion Graph</papertitle>
               </a>
               <br>
                 Zhongyu Ouyang,  <b>Chunhui Zhang</b>, Shifu Hou, Shang Ma, Chaoran Chen, Toby Li, Xusheng Xiao, Chuxu Zhang, Yanfang Ye
