--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
            <br>
                 <span style="font-size: 90%;">
         I have bravely persevered through a difficult period in my life (caused by the former PI), and am brave enough to overcome toxic environment. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
-        I am moving on to a new chapter in my life, and I am trying my best to help all students in difficult, toxic, or struggling situations, all for the sake of fostering a better academic environment that embraces diversity, equity, and inclusion.    </span>
+        I am trying my best to help all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>
             </p>
 
             </td>
