--- a/index.html
+++ b/index.html
@@ -74,22 +74,13 @@
 <!--            <p>-->
 <!--            <span style="font-style: italic;">[Jan 23, 2024]</span> One paper accepted to The Web Conference 2024 (controllable unlearning the vision models). Congrats to all co-authors and thank you all for letting me learn a lot!-->
 <!--            </p>-->
-<!--            <p>-->
-<!--            <span style="font-style: italic;">[Jan 16, 2024]</span> Two papers accepted to ICLR 2024 (alignment for fairness and robustness). Thanks to all co-authors, especially my rockstar advisor Prof. Soroush Vosoughi, my mentees and friends <a href="https://yaningjia.github.io/">Yaning Jia</a> and <a href="https://xiangchi-yuan.github.io/">Xiangchi Yuan</a>. I extremely recommend my friends to any professor seeking the best candidates!-->
-<!--            </p>-->
-<!--            <p>-->
-<!--            <span style="font-style: italic;">[Dec 10, 2023]</span> At NeurIPS 2023. Looking forward to meeting all friends in NOLA!-->
-<!--            </p>-->
-<!--            <p>-->
-<!--            <span style="font-style: italic;">[Nov 11, 2023]</span> Looking for research internship in Summer 2024. I appreciate a ping if you see a job I might fit. :-)-->
-<!--            </p>-->
             <p>
-             <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
+             <span style="font-style: italic;">[Jul 4, 2023]</span> Happily starting my summer in the Bay Area, CA! I am looking forward to meeting old friends and new folks.
            <br>
-                <span style="font-size: 90%;">
-        I have bravely persevered through a difficult period in my life (caused by the former PI), and am brave enough to overcome toxic environment. I am grateful to the Brandeis CS department for their kind support and humanitarian assistance to me during this time.
-        I am trying my best to help all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>
-            </p>
+<!--                <span style="font-size: 90%;">-->
+<!--        I am grateful to the Brandeis CS department for their kind support.-->
+<!--        I am dedicated to help all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>-->
+<!--            </p>-->
 
             </td>
           </tr>
