--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <span style="font-style: italic;">[Sep 20, 2024]</span> Papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
 <br>
 <p>
-             <span style="font-style: italic;">[Sep 7, 2024]</span> Completed my summer internship at the Honda Research Institute, San Jose, CA. I am happy to meet folks, and grateful for the collaborative experience with Dr. Shao-Yuan Lo.
+             <span style="font-style: italic;">[Sep 7, 2024]</span> Completed my summer internship at the Honda Research Institute in San Jose, CA. I am grateful for the collaborative experience with Dr. Shao-Yuan Lo and happy to have met great friends in the Bay Area.
            <br>
 <!--                <span style="font-size: 90%;">-->
 <!--        I am grateful to the Brandeis CS department for their kind support.-->
