--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and <b>scaling it to expand intelligence.</b> 
+  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling it (in both training and testing) to expand intelligence.</b> 
   My previous research explores the training principles of deep learning across diverse modalities, steering them toward prosocial and stable behaviors.
 </p>
 
@@ -124,7 +124,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Scaling Cognitive Limits: Identifying Working Memory Limits in LLMs</papertitle>
+                <papertitle>Working Memory Identifies Reasoning Limits in Language Models</papertitle>
               </a>
               <br>
               <b>Chunhui Zhang</b>, Yiren Jian, Zhongyu Ouyang, Soroush Vosoughi
