--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
-              <a href="">project page</a>
+              <a href="https://github.com/chunhuizng/working-memory-limits">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="data/EMNLP24_Working_Memory.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
-          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+          <!-- <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
@@ -175,7 +175,7 @@
               <a href="">preprint</a>
               <p></p>
             </td>
-          </tr>
+          </tr> -->
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
