--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 Your browser does not support the video tag.
                 </video></div>
                 <img src='images/vlm.png' width="160">
-              </div>
+              </div>/Users/chunhuizhang/Downloads/EMNLP24_Working_Memory.pdf
               <script type="text/javascript">
                 function fdnas_start() {
                   document.getElementById('fdnas_image').style.opacity = "1";
