--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang/张春晖), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, fortunately working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>.
+<p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang/張春晖), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, fortunately working with <a href="https://www.cs.dartmouth.edu/~soroush/">🌟Professor Soroush Vosoughi</a>.
 
-<p>I earned my MSCS degree and was honored with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p>
+<p>I earned my MSCS degree (research-based) and was honored with the <strong>GSAS Fellowship</strong> at <a href="https://www.brandeis.edu/">Brandeis University</a>. My research journey began at <a href="https://english.neu.edu.cn/">Northeastern University</a>, where I obtained a Bachelor's degree in CS and received the <strong>Outstanding Honor Thesis Award</strong>.</p>
 
 
 <!--                <p>-->
