--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling it (in both training and testing) to expand intelligence.</b> 
+  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling it (in both training and testing) to expand the memory capability for intelligence's long-form behaviors</b> 
   My previous research explores the training principles of deep learning across diverse modalities, steering them toward prosocial and stable behaviors.
 </p>
 
@@ -76,11 +76,11 @@
 <!--            <span style="font-style: italic;">[Jan 23, 2024]</span> One paper accepted to The Web Conference 2024 (controllable unlearning the vision models). Congrats to all co-authors and thank you all for letting me learn a lot!-->
 <!--            </p>-->
 <p>
-  <span style="font-style: italic;">[Sep 20, 2024]</span> Papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
+  <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
 <br>
 <p>
              <span style="font-style: italic;">[Sep 7, 2024]</span> Completed my summer internship at the Honda Research Institute in San Jose, CA. I am grateful for the collaborative experience with Dr. Shao-Yuan Lo and happy to have met great friends in the Bay Area.
-           <br>
+<br>
 <!--                <span style="font-size: 90%;">-->
 <!--        I am grateful to the Brandeis CS department for their kind support.-->
 <!--        I am dedicated to help all students in difficult, toxic, or struggling situations, all for a better academic environment that embraces diversity, equity, and inclusion.    </span>-->
