--- a/index.html
+++ b/index.html
@@ -109,6 +109,81 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/video-captioner.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Pretrained Image-Text Models are Secretly Video Captioners</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang*</b>, Yiren Jian*, Zhongyu Ouyang, Soroush Vosoughi
+              <br>
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>.
+                A general post-training recipe trains a Top-2 best multimodal captioner on PaperswithCode Leaderboard beating industry-level captioners
+              <br>
+<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
+              <br>
+              <a href="https://anonymous.4open.science/r/ic2vc">project page</a>
+              /
+              <a href="https://drive.google.com/file/d/1BDlofqXvD62j9drpLhXnmjZfdwJsnLlH/view?usp=sharing">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+            <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/Navajo.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Is It Navajo? Accurate Language Detection in Endangered Athabaskan Languages</papertitle>
+              </a>
+              <br>
+              Ivory Yang, Weicheng Ma, <b>Chunhui Zhang*</b>, Soroush Vosoughi
+              <br>
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>.
+              <br>
+<!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
+              <br>
+              <a href="https://drive.google.com/file/d/1X2ZhJTzDQVkPnRedJJQJB_hHOECtqPUI/view?usp=sharing">project page</a>
+              /
+              <a href="https://drive.google.com/file/d/1BDlofqXvD62j9drpLhXnmjZfdwJsnLlH/view?usp=sharing">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/working-memory.png' width="160">
               </div>
               <script type="text/javascript">
@@ -139,6 +214,7 @@
               <p></p>
             </td>
           </tr>
+
           <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
