--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <!--            <span style="font-style: italic;">[Jan 23, 2024]</span> One paper accepted to The Web Conference 2024 (controllable unlearning the vision models). Congrats to all co-authors and thank you all for letting me learn a lot!-->
 <!--            </p>-->
 <p>
+  <span style="font-style: italic;">[Jan 22, 2025]</span> Three papers are accepted to NAACL 2025. Thanks to my excellent collaborators and see you in Albuquerque!
+<br>
+                <p>
   <span style="font-style: italic;">[Sep 20, 2024]</span> Two papers are accepted to EMNLP 2024. Thanks to my excellent collaborators and see you in Miami!
 <br>
 <p>
