--- a/index.html
+++ b/index.html
@@ -112,6 +112,43 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/tom.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Overcoming Multi-step Complexity in Theory-of-Mind Reasoning: A Scalable Bayesian Planner</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Sean Dae Houlihan, Kwonjoon Lee, Nakul Agarwal, Zhongyu Ouyang, {Soroush Vosoughi, Shao-Yuan Lo}
+              <br>
+                <em>Preprint</em>.
+              <br>
+              <br>
+              <a href="https://anonymous.4open.science/r/scale-bayesian-tom-248B">project page</a>
+              /
+              <a href="https://drive.google.com/file/d/1vnAb1dy5_RJcA1vvSPP00u57sBi2hQp9/view?usp=sharing">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+	  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/video-captioner.png' width="160">
               </div>
               <script type="text/javascript">
@@ -143,6 +180,46 @@
               <p></p>
             </td>
           </tr>
+
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/twm.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Temporal Working Memory: Query-Guided Temporal Segment Refinement for Enhanced Multimodal Understanding</papertitle>
+              </a>
+              <br>
+              {Xingjian Diao*, <b>Chunhui Zhang</b>*}, Weiyi Wu, Zhongyu Ouyang, Peijun Qing, Ming Cheng, Soroush Vosoughi, Jiang Gui
+              <br>
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>.
+		Extending my working memory module study from EMNLP'24 to multimodal LLMs.
+              <br>
+              <br>
+              <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">project page</a>
+              /
+              <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+	
             <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()"></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
