--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <br>
               <b>Chunhui Zhang*</b>, Yiren Jian*, Zhongyu Ouyang, Soroush Vosoughi
               <br>
-                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>.
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
                 A general post-training recipe trains a Top-2 best multimodal captioner on PaperswithCode Leaderboard beating industry-level captioners
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
@@ -209,7 +209,7 @@
               <br>
               {Xingjian Diao*, <b>Chunhui Zhang</b>*}, Weiyi Wu, Zhongyu Ouyang, Peijun Qing, Ming Cheng, Soroush Vosoughi, Jiang Gui
               <br>
-                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>.
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>
 		Extending my working memory module study from EMNLP'24 to multimodal LLMs.
               <br>
               <br>
@@ -245,9 +245,9 @@
                 <papertitle>Is It Navajo? Accurate Language Detection in Endangered Athabaskan Languages</papertitle>
               </a>
               <br>
-              Ivory Yang, Weicheng Ma, <b>Chunhui Zhang*</b>, Soroush Vosoughi
+              Ivory Yang, Weicheng Ma, <b>Chunhui Zhang</b>, Soroush Vosoughi
               <br>
-                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>.
+                <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
