--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling it (in both training and testing) to expand the memory capability for intelligence's long-form behaviors</b> 
+  I am passionate about understanding the <b>cognitive rationale</b> behind deep learning's evolution, and then <b>scaling their memory capability for intelligence's long-range behaviors.</b> 
   My previous research explores the training principles of deep learning across diverse modalities, steering them toward prosocial and stable behaviors.
 </p>
 
