--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
               <b>Chunhui Zhang*</b>, Yiren Jian*, Zhongyu Ouyang, Soroush Vosoughi
               <br>
                 <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
-                A general post-training recipe trains a Top-2 best multimodal captioner on PaperswithCode Leaderboard beating industry-level captioners
+                
+	     Using RL to post-train a Top-2 best multimodal captioner on PaperswithCode Leaderboard and beating industry-level captioners
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
@@ -210,6 +211,7 @@
               {Xingjian Diao*, <b>Chunhui Zhang</b>*}, Weiyi Wu, Zhongyu Ouyang, Peijun Qing, Ming Cheng, Soroush Vosoughi, Jiang Gui
               <br>
                 <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>
+		
 		Extending my working memory module study from EMNLP'24 to multimodal LLMs.
               <br>
               <br>
