--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
               <b>Chunhui Zhang*</b>, Yiren Jian*, Zhongyu Ouyang, Soroush Vosoughi
               <br>
                 <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Main Conference.</em>
-                
-	     Using RL to post-train a Top-2 best multimodal captioner on PaperswithCode Leaderboard and beating industry-level captioners
+	     <br>
+	     <br>Using RL to post-train a Top-2 best multimodal captioner on PaperswithCode Leaderboard and beating industry-level captioners
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
@@ -211,8 +211,8 @@
               {Xingjian Diao*, <b>Chunhui Zhang</b>*}, Weiyi Wu, Zhongyu Ouyang, Peijun Qing, Ming Cheng, Soroush Vosoughi, Jiang Gui
               <br>
                 <em>Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL 2025) Findings.</em>
-		
-		Extending my working memory module study from EMNLP'24 to multimodal LLMs.
+		<br>
+		<br>Extending my working memory module study from EMNLP'24 to multimodal LLMs to enlarger their memory capabilities.
               <br>
               <br>
               <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">project page</a>
