--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ Feel free to drop me an email if you're up for a laid-back chat about life, care
             </td>
           </tr>
         </tbody></table>
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0'></script>
+<script type='text/javascript' id='clustrmaps' src='//clustrmaps.com/map_v2.js?d=IMj5QOauaOh3itXiv54K4YbC6WTpio8QQs1f5DGrnzo&cl=ffffff&w=a'></script>
 <div style="height:1px; margin-top:20px; margin-bottom:20px; background-image:linear-gradient(to right, transparent, #ddd, transparent);"></div>
 
           <!--
