--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <br>
               <a href="https://anonymous.4open.science/r/ic2vc">project page</a>
               /
-              <a href="https://drive.google.com/file/d/1BDlofqXvD62j9drpLhXnmjZfdwJsnLlH/view?usp=sharing">preprint</a>
+              <a href="data/NAACL24_OpenCaptioner.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
@@ -217,7 +217,7 @@
               <br>
               <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">project page</a>
               /
-              <a href="https://drive.google.com/file/d/12aPkYhu2fVS4g8bWNMNkXRcIvZYDJ_rA/view?usp=sharing">preprint</a>
+              <a href="https://xid32.github.io/images/publications/Temporal_Working_Memory.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
@@ -255,7 +255,7 @@
               <br>
               <a href="https://drive.google.com/file/d/1X2ZhJTzDQVkPnRedJJQJB_hHOECtqPUI/view?usp=sharing">project page</a>
               /
-              <a href="https://drive.google.com/file/d/1BDlofqXvD62j9drpLhXnmjZfdwJsnLlH/view?usp=sharing">preprint</a>
+              <a href="https://arxiv.org/pdf/2501.15773">preprint</a>
               <p></p>
             </td>
           </tr>
