--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
               <br>
 <!--        <em><a href="https://yaningjia.github.io/">Jia</a> is a master student who was mentored by me. Thanks <a href="https://yaningjia.github.io/">Jia</a> for this pleasant mentoring experience. I highly recommend my friend to any professor seeking an outstanding candidate!</em>-->
               <br>
-              <a href="https://anonymous.4open.science/r/ic2vc">project page</a>
+              <a href="https://github.com/chunhuizng/mllm-video-captioner">project page</a>
               /
-              <a href="data/NAACL24_OpenCaptioner.pdf">preprint</a>
+              <a href="https://arxiv.org/pdf/2502.13363">preprint</a>
               <p></p>
             </td>
           </tr>
